tests/NormalTests/paczka1/fuzzy1/77883746.err
Error in line 23: Lt0 A485 32,4
Error in line 11: A256 A485 337,8
Error in line 39: 1ljVG A399 -1,7
